--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,11 @@
             <version>4.0.1-alpha</version> 
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>BotonImagen</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
