--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -4,6 +4,12 @@ do.depend=false
 do.jar=true
 # No need to modify this property unless customizing JavaFX Ant task infrastructure
 endorsed.javafx.ant.classpath=.
+file.reference.activejdbc-1.4.14.j7-20170112.071854-1.jar=C:\\Users\\Jauma\\Desktop\\AProgram\\NetBeans\\SimulatedAnnealing\\SIGAPUCP\\lib\\activejdbc-1.4.14.j7-20170112.071854-1.jar
+file.reference.guava-16.0.1.jar=C:\\Users\\Jauma\\Desktop\\AProgram\\NetBeans\\SimulatedAnnealing\\SIGAPUCP\\lib\\guava-16.0.1.jar
+file.reference.javalite-common-1.4.14.j7-20170112.071828-1.jar=C:\\Users\\Jauma\\Desktop\\AProgram\\NetBeans\\SimulatedAnnealing\\SIGAPUCP\\lib\\javalite-common-1.4.14.j7-20170112.071828-1.jar
+file.reference.postgresql-42.1.4.jar=C:\\Users\\Jauma\\Desktop\\AProgram\\NetBeans\\SimulatedAnnealing\\SIGAPUCP\\lib\\postgresql-42.1.4.jar
+file.reference.slf4j-api-1.7.25.jar=C:\\Users\\Jauma\\Desktop\\AProgram\\NetBeans\\SimulatedAnnealing\\SIGAPUCP\\lib\\slf4j-api-1.7.25.jar
+file.reference.slf4j-simple-1.7.25.jar=C:\\Users\\Jauma\\Desktop\\AProgram\\NetBeans\\SimulatedAnnealing\\SIGAPUCP\\lib\\slf4j-simple-1.7.25.jar
 javac.debug=true
 javadoc.preview=true
 javafx.run.inbrowser=<Default System Browser>
