--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,7 +30,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.activejdbc-1.4.14.j7-20170112.071854-1.jar=../activejdbc-1.4.14.j7-20170112.071854-1.jar
-file.reference.activejdbc-instrumentation-1.4.14.j7-20170112.071831-1.jar=../activejdbc-instrumentation-1.4.14.j7-20170112.071831-1.jar
+file.reference.activejdbc-instrumentation-1.4.14.j7-20170112.071831-1.jar=lib/activejdbc-instrumentation-1.4.14.j7-20170112.071831-1.jar
 file.reference.guava-16.0.1.jar=../guava-16.0.1.jar
 file.reference.javalite-common-1.4.14.j7-20170112.071828-1.jar=../javalite-common-1.4.14.j7-20170112.071828-1.jar
 file.reference.main-java=src/main/java
