--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,14 +29,14 @@ dist.jar=${dist.dir}/SIGAPUCP2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.activejdbc-1.4.14.j7-20170112.071854-1.jar=../activejdbc-1.4.14.j7-20170112.071854-1.jar
+file.reference.activejdbc-1.4.14.j7-20170112.071854-1.jar=lib/activejdbc-1.4.14.j7-20170112.071854-1.jar
 file.reference.activejdbc-instrumentation-1.4.14.j7-20170112.071831-1.jar=lib/activejdbc-instrumentation-1.4.14.j7-20170112.071831-1.jar
-file.reference.guava-16.0.1.jar=../guava-16.0.1.jar
-file.reference.javalite-common-1.4.14.j7-20170112.071828-1.jar=../javalite-common-1.4.14.j7-20170112.071828-1.jar
+file.reference.guava-16.0.1.jar=lib/guava-16.0.1.jar
+file.reference.javalite-common-1.4.14.j7-20170112.071828-1.jar=lib/javalite-common-1.4.14.j7-20170112.071828-1.jar
 file.reference.main-java=src/main/java
-file.reference.postgresql-42.1.4.jar=../postgresql-42.1.4.jar
-file.reference.slf4j-api-1.7.25.jar=../slf4j-api-1.7.25.jar
-file.reference.slf4j-simple-1.7.25.jar=../slf4j-simple-1.7.25.jar
+file.reference.postgresql-42.1.4.jar=lib/postgresql-42.1.4.jar
+file.reference.slf4j-api-1.7.25.jar=lib/slf4j-api-1.7.25.jar
+file.reference.slf4j-simple-1.7.25.jar=lib/slf4j-simple-1.7.25.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
