--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,6 +33,7 @@ file.reference.activejdbc-1.4.14.j7-20170112.071854-1.jar=lib/activejdbc-1.4.14.
 file.reference.activejdbc-instrumentation-1.4.14.j7-20170112.071831-1.jar=lib/activejdbc-instrumentation-1.4.14.j7-20170112.071831-1.jar
 file.reference.controlsfx-8.40.14.jar=lib\\controlsfx-8.40.14.jar
 file.reference.guava-16.0.1.jar=lib/guava-16.0.1.jar
+file.reference.iText-5.0.5.jar=I:\\project\\iText-5.0.5.jar
 file.reference.javalite-common-1.4.14.j7-20170112.071828-1.jar=lib/javalite-common-1.4.14.j7-20170112.071828-1.jar
 file.reference.main-java=src/main/java
 file.reference.postgresql-42.1.4.jar=lib/postgresql-42.1.4.jar
@@ -50,7 +51,8 @@ javac.classpath=\
     ${file.reference.postgresql-42.1.4.jar}:\
     ${file.reference.slf4j-api-1.7.25.jar}:\
     ${file.reference.slf4j-simple-1.7.25.jar}:\
-    ${file.reference.controlsfx-8.40.14.jar}
+    ${file.reference.controlsfx-8.40.14.jar}:\
+    ${file.reference.iText-5.0.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
